--- a/voyager/templates/apply.html
+++ b/voyager/templates/apply.html
@@ -2,6 +2,11 @@
 
 <meta name="title" content="#navbar-apply">
 <body>
+	<div class="response-alert">
+		<div class="response-title">
+			Thank You! We have received your response. You'll be hearing back from us shortly and redirected to the main page
+		</div>
+	</div>
 	<div class="picture apply-picture">
 		<h2 class="page-title"> Apply </h2>
 		<div class="header-overlay"></div>
