--- a/voyager/templates/careers.html
+++ b/voyager/templates/careers.html
@@ -13,12 +13,15 @@
 		</p>
 	</div> -->
 	<div class="career-launch">
+		<div class="title-wrapper style-gray">
+			<div class="executive-panel-title">Full Time & Internships </div>
+		</div>
 		<div class="page-container">
 			<div class="career-whitespace"></div>
 			<!-- <h2 class="page-title"> Careers </h2> -->
-			<h3 class="executive-panel-title"> Full Time & Internships </h3>
+			<!-- <h3 class="executive-panel-title"> Full Time & Internships </h3> -->
 
-			<div class="line-break career-line-break"></div>
+			<!-- <div class="line-break career-line-break"></div> -->
 			<!-- <div class="about-selector">2015</div> -->
 			<!-- <div class="about-selector">2014</div> -->
 			<!-- <h3 class="page-title subtitle"> Full Time & Internships </h3> -->
