--- a/voyager/templates/carousel/amazon.html
+++ b/voyager/templates/carousel/amazon.html
@@ -1,12 +1,6 @@
 <div class="title-divs amazon-screen">
 	<div class="background-smolder carousel-smolder"></div>
 	<div class="title-logo-background"></div>
-	<div class="arrow-wrapper-left" data-value="pinterest">
-		<div class="arrow-left"></div>
-	</div>
-	<div class="arrow-wrapper-right" data-value="valve">
-		<div class="arrow-right"></div>
-	</div>
 	<div class="carousel-container">
 		<!-- <h1 class="main-title"> Amazon </h1> -->
 		<div class="title-logo">
@@ -16,9 +10,15 @@
 			<!-- Industry Overview of Textbook Market</p> -->
 		<p class="sub-title-gibson-black"> Client - Fall 2013 </p>
 		 <!-- <br> -->
-		<p class="sub-title-black">	Industry Overview of Textbook Market </p>
+		<p class="sub-title-black">	Customer Segmentation and Competitor Analysis </p>
 
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
+	</div>
+	<div class="arrow-wrapper-left" data-value="pinterest">
+		<div class="arrow-left"></div>
+	</div>
+	<div class="arrow-wrapper-right" data-value="valve">
+		<div class="arrow-right"></div>
 	</div>
 </div>
