--- a/voyager/templates/carousel/instagram.html
+++ b/voyager/templates/carousel/instagram.html
@@ -1,12 +1,6 @@
 <div class="title-divs instagram-screen">
 	<div class="background-smolder carousel-smolder"></div>
 	<div class="title-logo-background"></div>
-	<div class="arrow-wrapper-left" data-value="valve">
-		<div class="arrow-left"></div>
-	</div>
-	<div class="arrow-wrapper-right" data-value="pinterest">
-		<div class="arrow-right"></div>
-	</div>
 	<div class="carousel-container">
 		<!-- <h1 class="main-title"> Instagram </h1> -->
 		<div class="title-logo">
@@ -14,8 +8,14 @@
 		</div>
 		<p class="sub-title-gibson-black"> Client - Fall 2014 </p>
 		 <!-- <br> -->
-		<p class="sub-title-black">	Digital Advertising Market Assessment </p>
+		<p class="sub-title-black"> Industry Overview of Digital Advertising </p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
+	</div>
+	<div class="arrow-wrapper-left" data-value="valve">
+		<div class="arrow-left"></div>
+	</div>
+	<div class="arrow-wrapper-right" data-value="pinterest">
+		<div class="arrow-right"></div>
 	</div>
 </div>
