--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -16,9 +16,9 @@
 </div>
 <div class="title-divs carousel-display">
 	<!-- <div class="carousel-divs current-carousel"></div> -->
-	<div class="carousel-divs pinterest-carousel"></div>
-	<div class="carousel-divs amazon-carousel"></div>
 	<div class="carousel-divs valve-carousel"></div>
+	<div class="carousel-divs amazon-carousel"></div>
+	<div class="carousel-divs pinterest-carousel"></div>
 	<div class="carousel-divs instagram-carousel"></div>
 </div>
 <!-- <div id="carousel-display">
@@ -30,7 +30,7 @@ done in the HTML as so -->
 	<div class="picture-frame">
 		<div class="grid-picture crystal-picture"></div>
 		<div class="grid-picture ted-picture"></div>
-		<div class="grid-picture savan-picture"></div>
+		<div class="grid-picture matt-picture"></div>
 		<div class="grid-picture robbie-picture"></div>
 		<div class="grid-picture natalie-picture"></div>
 		<div class="grid-picture felix-picture"></div>
@@ -41,7 +41,7 @@ done in the HTML as so -->
 	<div class="text-frame">
 		<div class="text-wrapper">
 			<h1 class="panel-title"> Our Members </h1>
-			<p class="sub-title"> some lines of text describing how our members are so cool </p>
+			<p class="sub-title paragraph-wrap"> Driven people from a diversity of backgrounds and majors </p>
 		</div>
 	</div>
 </div>
@@ -67,7 +67,7 @@ done in the HTML as so -->
 	<div class="text-frame-logo">
 		<div class="text-wrapper">
 			<h1 class="panel-title"> Our Companies </h1>
-			<p class="sub-title table-style"> some lines of text describing how our members are able to make it to these prestigious companies </p>
+			<p class="sub-title table-style"> Alumni take their experience in Voyager to prestigious firms in consulting, finance, and technology </p>
 		</div>
 	</div>
 </div>
