--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -2,12 +2,14 @@
 <meta name="title" content="#navbar-recruiting">
 <body>
 	<div class="picture recruiting-picture">
-		<h2 class="page-title"> Recruiting </h2>
+		<h2 class="page-title recruiting-header-title"> Recruiting </h2>
 		<div class="header-overlay"></div>
 	</div>
-	<div class="generic-whitespace"></div>
+	<!-- <div class="generic-whitespace"></div> -->
+	<div class="title-wrapper style-purple">
+		<div class="executive-panel-title">Recruiting Timeline</div>
+	</div>
 	<div class="page-container">
-		<h3 class="executive-panel-title"> Timeline - 2015 </h3>
 		<div class="line-break"></div>
 		<table class="u-full-width table-style">
 			<tr class="cabin-font">
@@ -37,24 +39,24 @@
 			</tr>
 			<tr>
 				<td> App Deadline </td>
-				<td> September 12 </td>
-				<td></td>
+				<td> September 12 - Noon </td>
+				<td> Voyager Website</td>
 				<!-- <td> Dwinelle 109 </td> -->
 			</tr>
 			<tr>
 				<td> First Round Interviews </td>
 				<td> September 14 </td>
-				<td> TBD </td>
+				<td> Haas Library </td>
 			</tr>
 			<tr>
 				<td> Meet Voyager </td>
 				<td> September 17 </td>
-				<td> TBD </td>
+				<td> Haas Library </td>
 			</tr>
 			<tr>
 				<td> Second Round Interviews </td>
 				<td> September 18 </td>
-				<td> TBD </td>
+				<td> Haas Library </td>
 			</tr>
 		</table>
 		<div class="whitespace"></div>
