--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -19,6 +19,30 @@ body {
 
 }
 
+.response-alert {
+	position: fixed;
+	height: 300px;
+	width: 500px;
+	background-color: white;
+	left: 0; right: 0; top: 0; bottom: 0;
+	margin: auto;
+	z-index: 5;
+	border-radius: 5px;
+	border: 2px solid black;
+	display: none;
+	opacity: 0;
+}
+
+.response-title {
+	font-size: 200%;
+	height: 235px;
+	position: absolute;
+	margin: auto;
+	width: 80%;
+	top: 0; bottom: 0; left: 0; right: 0;
+	text-align: center;
+}
+
 .display-appear {
 	display: block;
 }
@@ -344,11 +368,21 @@ body {
 	line-height: 30px;
 }
 
+.about-title-whitespace {
+	width: 100%;
+	height: 20px;
+	background-color: white;
+}
+
 .paragraph {
 	/*color: white;*/
-	margin-bottom: 60px;
+	/*margin-bottom: 60px;*/
+	margin-bottom: 10px;
 	font-size: 20px;
 	font-family: 'Lato', sans-serif;
+	width: 90%;
+	margin: auto;
+	text-align: justify;
 }
 
 .picture-frame {
@@ -374,17 +408,41 @@ body {
 .text-frame {
 	text-align: center;
 	/*background-color: #779CAB;*/
-	background-color: #336699;
+	background-color: #24477f;
 	position: absolute;
 	color: white;
 	margin: auto;
 	right: 0; top: 0; bottom: 0;
 }
 
+.style-blue {
+	background-color: #24477f !important;
+}
+
+.style-green {
+	background-color: #177b57 !important;
+}
+
+.style-red {
+	background-color: #c00 !important;
+}
+
+.style-gray {
+	background-color: #404040 !important;
+}
+
+.style-purple {
+	background-color: #48154A !important;
+}
+
+.style-light-blue {
+	background-color: #000 !important;
+}
+
 .about-frame {
 	max-width: 100% !important;
 	height: 70%;
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 	display: inline-block;
 	margin: 0;
 	position: relative;
@@ -394,13 +452,49 @@ body {
 .service-subject-frame {
 	max-width: 100% !important;
 	height: 300px;
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 	display: inline-block;
 	margin: 0;
 	position: relative;
 	display: block;
+	text-align: center;
+	line-height: 300px;
+	font-size: 200%;
+	color: white;
 	/*overflow: hidden;*/
+}
 
+.service-header-title {
+	padding-right: 70px;
+}
+
+.contact-header-title {
+	padding-right: 70px;
+}
+
+.recruiting-header-title {
+	padding-right: 157px;
+}
+
+.title-wrapper {
+	background-color: #177b57;
+	color: white;
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+
+.service-overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+	opacity: 0.3;
+}
+
+.service-text {
+	position: absolute;
+	margin: auto;
+	left: 0; right: 0;
 }
 
 .service-subject-wrapper {
@@ -417,7 +511,7 @@ body {
 	margin-right: 20px;
 	position: relative;
 	background-color: black;
-	height: 500px;
+	height: 400px;
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
 	-moz-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
@@ -441,7 +535,7 @@ body {
 
 .service-box-description {
 	width: 100%;
-	height: 200px;
+	height: 100px;
 	background-color: white;
 }
 
@@ -458,12 +552,17 @@ body {
 }
 
 .text-wrapper {
-	height: 180px;
+	height: 150px;
 	position: absolute;
 	margin: auto;
 	margin-left: 20px; margin-right: 20px;
 	top: 0; bottom: 0; left: 0; right: 0;
 	/*overflow: scroll;*/
+}
+
+.paragraph-wrap {
+	width: 90%;
+	margin: auto;
 }
 
 .apply-description {
@@ -479,15 +578,15 @@ body {
 }
 
 .about-mission-text-height {
-	height: 270px;
+	height: 390px;
 }
 
 .about-history-text-height {
-	height: 482px;
+	height: 410px;
 }
 
 .about-culture-text-height {
-	height: 290px;
+	height: 420px;
 }
 
 
@@ -500,7 +599,8 @@ body {
 	/*height: 50%;*/
 	text-align: center;
 	/*background-color: #404040;*/
-	background-color: #0A4958;
+	/*background-color: #0A4958;*/
+	background-color: #177b57;
 	position: absolute;
 	color: white;
 	top: 0;
@@ -545,7 +645,8 @@ body {
 	color: black;
 	text-align: center;
 	/*margin-top: 40px;*/
-	margin-bottom: 20px;
+	/*margin-bottom: 20px;*/
+	margin-bottom: 0;
 }
 
 .line-break {
@@ -618,6 +719,7 @@ body {
 
 .panel-title {
 	font-weight: bold;
+	margin-bottom: 0;
 }
 
 .executive-panel-title {
@@ -629,7 +731,7 @@ body {
 
 .title-logo {
 	position: relative;
-	background-color: white;
+	background-color: transparent;
 	width: 500px;
 	height: 100px;
 	margin: 0 auto;
@@ -736,7 +838,7 @@ body {
 	top: 0; bottom: 0; left: 0; right: 0;
 	color: white;
 	font-size: 600%;
-	z-index: 1;	
+	z-index: 1;
 	/*margin-top: 20px;*/
 
 }
@@ -840,6 +942,7 @@ body {
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	/*z-index: 1;*/
 	/*display: none;*/
 }
 
