--- a/voyager/templates/services.html
+++ b/voyager/templates/services.html
@@ -2,96 +2,112 @@
 <meta name="title" content="#navbar-services">
 <body>
 	<div class="picture services-picture">
-		<h2 class="page-title"> Services </h2>
+		<h2 class="page-title service-header-title"> Services </h2>
 	</div>
-	<div class="generic-whitespace"></div>
+	<div class="title-wrapper">
+		<!-- <div class="generic-whitespace"></div> -->
+		<div class="executive-panel-title">Industries</div>
+		<!-- <div class="generic-whitespace"></div> -->
+	</div>
 	<div class="service-subject-wrapper">
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
-		<div class="three columns service-subject-frame"></div>
+		<div class="three columns service-subject-frame tech-picture">
+			Technology
+		</div>
+		<div class="three columns service-subject-frame media-picture">
+			<div class="service-overlay"></div>
+			<p class="service-text"> Media </p>
+		</div>
+		<div class="three columns service-subject-frame manufacturing-picture">
+			<div class="service-overlay"></div>
+			<p class="service-text"> Manufacturing </p>
+		</div>
+		<div class="three columns service-subject-frame retail-picture">
+			<div class="service-overlay"></div>
+			<p class="service-text"> Retail </p>
+		</div>
+		<div class="three columns service-subject-frame healthcare-picture">
+			Healthcare
+		</div>
+		<div class="three columns service-subject-frame public-picture">
+			Public Sector
+		</div>
+		<div class="three columns service-subject-frame consumer-picture">
+			Consumer Goods
+		</div>
+		<div class="three columns service-subject-frame travel-picture">
+			Travel
+		</div>
 	</div>
 	<!-- <div class="generic-whitespace"></div> -->
+	<div class="title-wrapper">
+		<!-- <div class="generic-whitespace"></div> -->
+		<div class="executive-panel-title">Expertise</div>
+		<!-- <div class="generic-whitespace"></div> -->
+	</div>
 	<div class="services-box-container">
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Market Research
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture market-research-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p>  Industry Overview &middot;  Trends Analysis &middot;  Competitor Landscape 
 				</p>
 			</div>
 		</div>
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Marketing and Sales
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture coach-ad-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p> Advertising Strategy &middot; Brand Positioning &middot; Sales Development 
 				</p>
 			</div>
 		</div>
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Business Model
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture business-model-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p> Customer Segmentation &middot; Value Proposition &middot;  Distribution 
 				</p>
 			</div>
 		</div>
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Product Research
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture product-research-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p>  Product Line &middot; Monetization
 				</p>
 			</div>
 		</div>
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Operations
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture operations-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p> Vendor Selection &middot; People Management
 				</p>
 			</div>
 		</div>
 		<div class="services-box">
 			<div class="service-box-title">
-				Title-1
+				Pricing
 			</div>
-			<div class="service-box-picture">
+			<div class="service-box-picture pricing-picture">
 			</div>
 			<div class="service-box-description">
-				<p> description for particular box
-					filler fileer
-					awoeifjaowiefoawiefjoai
+				<p>  Cost Structure Analysis &middot; Pricing Models
 				</p>
 			</div>
 		</div>
