--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -571,8 +571,8 @@ body {
 }
 
 .logo-picture-box {
-	height: 200px;
-	width: 19%;
+	height: 300px;
+	width: 300px;
 	margin: auto;
 	/*background-color: black;*/
 }
