added background color to fix line issue

--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -45,7 +45,7 @@ done in the HTML as so -->
 		</div>
 	</div>
 </div>
-<div class="title-divs member-display">
+<div class="title-divs member-display style-green ">
 	<div class="logo-frame">
 		<div class="grid-member-picture google-picture"></div>
 		<div class="grid-member-picture deloitte-picture"></div>
