better blue for slower load images

--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -21,13 +21,13 @@
 				</p>
 			</div>
 		</div>
-		<div class="six columns about-frame goldengate-picture">
+		<div class="six columns about-frame goldengate-picture style-blue">
 			<!-- <div class="six columns"> -->
 			<!-- </div> -->
 		</div>
 	</div>
 	<div class="about-panels">
-		<div class="six columns about-frame voyager-culture-picture">
+		<div class="six columns about-frame voyager-culture-picture style-blue">
 		</div>
 		<div class="six columns about-frame">
 			<div class="text-wrapper about-culture-text-height">
@@ -59,7 +59,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="six columns about-frame impact-picture">
+		<div class="six columns about-frame impact-picture style-blue">
 		</div>
 	</div>
 	<!-- <div class="generic-whitespace"></div> -->
