reduced image size

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -256,7 +256,7 @@
 }
 
 .goldengate-picture {
-	background-image: url("../images/goldengate.jpg");
+	background-image: url("../images/goldengate.png");
 	background-size: cover;
 	background-position: center;
 }
