redone spacing for service-box

--- a/voyager/templates/services.html
+++ b/voyager/templates/services.html
@@ -84,7 +84,7 @@
 			</div>
 			<div class="service-box-picture product-research-picture">
 			</div>
-			<div class="service-box-description">
+			<div class="service-box-description service-box-margin">
 				<p>  Product Line &middot; Monetization
 				</p>
 			</div>
@@ -95,7 +95,7 @@
 			</div>
 			<div class="service-box-picture operations-picture">
 			</div>
-			<div class="service-box-description">
+			<div class="service-box-description service-box-margin">
 				<p> Vendor Selection &middot; People Management
 				</p>
 			</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="service-box-picture pricing-picture">
 			</div>
-			<div class="service-box-description">
+			<div class="service-box-description service-box-margin">
 				<p>  Cost Structure Analysis &middot; Pricing Models
 				</p>
 			</div>
