--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -512,7 +512,7 @@ body {
 	margin-right: 20px;
 	position: relative;
 	background-color: black;
-	height: 400px;
+	height: 380px;
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
 	-moz-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
@@ -536,12 +536,22 @@ body {
 
 .service-box-description {
 	width: 100%;
-	height: 100px;
+	height: 80px;
 	background-color: white;
+	position: relative;
+	overflow: auto !important;
 }
 
 .service-box-description p {
 	font-family: 'Lato', sans-serif;
+	font-size: 110%;
+	margin-top: 12px;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.service-box-margin p {
+	margin-top: 25px;
 }
 
 .services-box-container {
