--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -690,7 +690,9 @@ body {
 }
 
 .about-picture {
-	background-image: url("../images/team.jpg");
+	background-image: url("../images/voyager-consulting.jpg");
+	background-size: cover;
+	background-position: 0 -50;
 }
 
 .career-picture {
