--- a/voyager/templates/careers.html
+++ b/voyager/templates/careers.html
@@ -3,7 +3,7 @@
 
 <body>
 	<div class="picture career-picture">
-		<h2 class="page-title"> Careers </h2>
+		<h2 class="page-title career-header-title"> Careers </h2>
 		<div class="header-overlay"></div>
 	</div>
 
