--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -577,11 +577,11 @@ body {
 }
 
 .text-wrapper {
-	height: 150px;
-	position: absolute;
-	margin: auto;
+	/*height: 150px;*/
+	/*position: absolute;*/
+	/*margin: auto;*/
 	margin-left: 20px; margin-right: 20px;
-	top: 0; bottom: 0; left: 0; right: 0;
+	/*top: 0; bottom: 0; left: 0; right: 0;*/
 	/*overflow: scroll;*/
 }
 
@@ -603,7 +603,7 @@ body {
 }
 
 .about-mission-text-height {
-	height: 390px;
+	/*height: 390px;*/
 }
 
 .about-history-text-height {
