--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -9,7 +9,7 @@
 	</iframe>
 	<div class="about-panels">
 		<div class="six columns about-frame">
-			<div class="text-wrapper about-mission-text-height">
+			<div class="about-wrapper about-mission-text-height">
 				<h3 class="mission-title"> Mission </h3>
 				<p class="paragraph black">
 					Voyager Consulting is a UC Berkeley sponsored, student-run organization that provides strategy consulting services to growth-stage and Fortune 500 companies.
@@ -30,7 +30,7 @@
 		<div class="six columns about-frame voyager-culture-picture style-blue">
 		</div>
 		<div class="six columns about-frame">
-			<div class="text-wrapper about-culture-text-height">
+			<div class="about-wrapper about-culture-text-height">
 				<h3 class="mission-title"> Culture </h3>
 				<p class="paragraph black">
 					The Voyager team is a close group of individuals bonded by shared personal and professional pursuits. New members connect over a weekend retreat and regular weekly socials such as happy hours, team dinners, concerts, kick-backs and more.
@@ -46,7 +46,7 @@
 	</div>
 	<div class="about-panels">
 		<div class="six columns about-frame">
-			<div class="text-wrapper about-history-text-height">
+			<div class="about-wrapper about-history-text-height">
 				<h3 class="mission-title"> Projects </h3>
 				<p class="paragraph black">
 					Every semester Voyager works with clients on 4 different projects for 10-12 weeks. Projects are headed by a project leader and strategy advisor with a team of 4 to 5 consultants. Alumni and faculty mentors also play a role when appropriate.
