slight title animation

--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -989,6 +989,7 @@ body {
 	margin: auto;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
+	display: none;
 }
 
 .carousel-container {
