--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -7,6 +7,9 @@
 	<div id="side-business" class="selector"></div>
 	<div id="side-redirect" class="selector"></div>
 </div>
+<div class="load-screen">
+	<div class="load-circle"></div>
+</div>
 <div class="title-divs title-screen">
 	<div class="background-smolder"></div>
 	<div class="title-container">
