separated load screen

--- a/voyager/templates/services.html
+++ b/voyager/templates/services.html
@@ -1,6 +1,9 @@
 {% include "header.html" %}
 <meta name="title" content="#navbar-services">
 <body>
+	<div class="load-screen">
+		<div class="load-circle"></div>
+	</div>
 	<div class="picture services-picture">
 		<h2 class="page-title service-header-title"> Services </h2>
 	</div>
