--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -19,17 +19,17 @@
 			</tr>
 			<tr>
 				<td> Tabling </td>
-				<td> August 25 - September 4 </td>
+				<td> August 25 - September 11 </td>
 				<td> Sproul Plaza </td>
 			</tr>
 			<tr>
 				<td> Voyager First InfoSession </td>
-				<td> September 9 </td>
+				<td> September 9 at 7:00pm </td>
 				<td> Moffit 101 </td>
 			</tr>
 			<tr>
 				<td> Voyager Second InfoSession </td>
-				<td> September 10 </td>
+				<td> September 10 at 7:00pm </td>
 				<td> Moffit 101 </td>
 			</tr>
 			<tr>
