--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -898,6 +898,8 @@ body {
 */
 .navbar-logo {
 	/*float: left;*/
+	width: 170px;
+	height: 73.5px;
 	max-width: 170px;
 	max-height: 100%;
 	margin-top: 10px;
