--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -204,6 +204,69 @@
 				</div>
 			</div>
 		</div>
+		<div class="generic-whitespace"></div>
+		<div class="title-wrapper style-blue">
+			<div class="executive-panel-title"> Managers </div>
+		</div>
+		<div class="generic-whitespace"></div>
+			<div class="page-container">
+				<div class="executive-box">
+					<div class="executive-member">
+						<div class="executive-picture alishan-picture"></div>
+						<div class="executive-text">
+							Alishan Patel
+						</div>
+						<div class="executive-description">
+							<p>
+								alishan.patel@berkeley.edu
+							</p>
+	<!-- 						<p>
+								Ajay is a current sophomore who is intending on studying business administration and economics. He grew up in Southern California and is a huge fan of the outdoors. In his free time, Ajay enjoys playing pick up basketball, watching the Lakers, and playing FIFA with his friends.
+							</p> -->
+						</div>
+					</div>
+					<div class="executive-member">
+						<div class="executive-picture margarita-prof-picture"></div>
+						<div class="executive-text">
+							Margarita Oreta
+						</div>
+						<div class="executive-description">
+							<p>
+								moreta@berkeley.edu
+							</p>
+	<!-- 						<p>
+								Gwin Zhou is a senior double majoring in Economics and Computer Science. She joined Voyager in the fall of 2014. Gwin grew up in China and spent her first two years in college at the University of Michigan. In her spare time, Gwin enjoys reading, playing bridge (amateur), and going on road trips (as a passenger).
+							</p> -->
+						</div>
+					</div>
+					<div class="executive-member">
+						<div class="executive-picture tommy-picture"></div>
+						<div class="executive-text">
+							Tommy Nyugen
+						</div>
+						<div class="executive-description">
+							<p>
+								<!-- Description -->
+								tommynguyen560@berkeley.edu
+							</p>
+						</div>
+					</div>
+					<div class="executive-member">
+						<div class="executive-picture david-picture"></div>
+						<div class="executive-text">
+							David Liu
+						</div>
+						<div class="executive-description">
+							<p>
+								davidzeyiliu@berkeley.edu
+							</p>
+	<!-- 						<p>
+								Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
+							</p> -->
+						</div>
+					</div>
+				</div>
+			</div>
 		<!-- 			<div class="pl-members">
 			<div class="pl-picture-box">
 				<div class="pl-picture ajay-picture"></div>
