lilac picture uploaded

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -183,6 +183,10 @@
 	background-image: url("../images/members/david.png");
 }
 
+.lilac-picture {
+	background-image: url("../images/members/lilac.png");
+}
+
 .vc-logo-16-picture {
 	background-image: url("../images/vc-logo-16.jpg");
 	background-position: center;
