--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -79,6 +79,7 @@
 					</div>
 					<div class="executive-description">
 						<p>
+							Vice President | Technical Development <br>
 							felixliu@berkeley.edu
 						</p>
 					</div>
@@ -93,6 +94,7 @@
 							Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
 						</p> -->
 						<p>
+							President <br>
 							savan70@berkeley.edu
 						</p>
 					</div>
@@ -104,6 +106,7 @@
 					</div>
 					<div class="executive-description">
 						<p>
+							Vice President | Professional Development <br>
 							oliviayugu@berkeley.edu
 						</p>
 <!-- 						<p>
@@ -118,6 +121,7 @@
 					</div>
 					<div class="executive-description">
 						<p>
+							Vice President | Operations
 							t.xiao@berkeley.edu
 						</p>
 <!-- 						<p>
@@ -132,7 +136,8 @@
 					</div>
 					<div class="executive-description">
 						<p>
-						p.tanuri@berkeley.edu
+							Vice President | Finance <br>
+							p.tanuri@berkeley.edu
 						</p>
 <!-- 						<p>
 							Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
@@ -218,6 +223,7 @@
 						</div>
 						<div class="executive-description">
 							<p>
+								External Manager <br>
 								alishan.patel@berkeley.edu
 							</p>
 	<!-- 						<p>
@@ -232,10 +238,26 @@
 						</div>
 						<div class="executive-description">
 							<p>
+								External Manager <br>
 								moreta@berkeley.edu
 							</p>
 	<!-- 						<p>
 								Gwin Zhou is a senior double majoring in Economics and Computer Science. She joined Voyager in the fall of 2014. Gwin grew up in China and spent her first two years in college at the University of Michigan. In her spare time, Gwin enjoys reading, playing bridge (amateur), and going on road trips (as a passenger).
+							</p> -->
+						</div>
+					</div>
+					<div class="executive-member">
+						<div class="executive-picture lilac-picture"></div>
+						<div class="executive-text">
+							Lilac Peterson
+						</div>
+						<div class="executive-description">
+							<p>
+								External Manager <br>
+								lilac.peterson@berkeley.edu
+							</p>
+	<!-- 						<p>
+								Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
 							</p> -->
 						</div>
 					</div>
@@ -247,6 +269,7 @@
 						<div class="executive-description">
 							<p>
 								<!-- Description -->
+								Internal Manager <br>
 								tommynguyen560@berkeley.edu
 							</p>
 						</div>
@@ -258,6 +281,7 @@
 						</div>
 						<div class="executive-description">
 							<p>
+								Internal Manager <br>
 								davidzeyiliu@berkeley.edu
 							</p>
 	<!-- 						<p>
