new pics for tommy

--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -264,7 +264,7 @@
 					<div class="executive-member">
 						<div class="executive-picture tommy-picture"></div>
 						<div class="executive-text">
-							Tommy Nyugen
+							Tommy Nguyen
 						</div>
 						<div class="executive-description">
 							<p>
