--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -34,8 +34,8 @@
 			</tr>
 			<tr>
 				<td> Case Workshop </td>
-				<td> September 11 </td>
-				<td> Dwinelle 109 </td>
+				<td> September 11 at 7:00pm </td>
+				<td> Dwinelle 109</td>
 			</tr>
 			<tr>
 				<td> App Deadline </td>
