--- a/voyager/templates/table.html
+++ b/voyager/templates/table.html
@@ -1,5 +1,5 @@
 <table class="u-full-width table-style">
-	<tr class="cabin-font">
+	<tr class="lato-bold">
 		<th> Name </th>
 		<th> Company </th>
 		<th> Position </th>
