--- a/voyager/static/css/members.css
+++ b/voyager/static/css/members.css
@@ -26,7 +26,7 @@
 	width: 100%;
 	height: 400px;
 	margin: auto;
-	left: 0; right: 0; bottom: -200;
+	left: 0; right: 0; top: 600;
 }
 
 .personal-title {
