--- a/voyager/templates/members/philmontanuri.html
+++ b/voyager/templates/members/philmontanuri.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="personal-description">
 			<p>
-			Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
+			Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned at McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
 			</p>
 		</div>
 	</div>
