color change for profile demonstration

--- a/voyager/static/css/members.css
+++ b/voyager/static/css/members.css
@@ -33,7 +33,7 @@
 	/*background-color: red;*/
 	font-family: Lato-Bold;
 	text-align: center;
-	color: white;
+	/*color: white;*/
 	font-size: 400%;
 }
 
@@ -41,6 +41,6 @@
 	width: 60%;
 	margin: auto;
 	text-align: justify;
-	color: white;
+	/*color: white;*/
 	font-size: 120%;
 }
