--- a/voyager/templates/members/felixliu.html
+++ b/voyager/templates/members/felixliu.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{% static "css/members.css" %}" />
 
 
-<div class="display-box style-blue">
+<div class="display-box">
 	<div class="personal-picture felix-picture"></div>
 	<div class="personal-text">
 		<div class="personal-title">
