--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -31,12 +31,23 @@
 	border: 1px solid white;
 	height: 40px;
 	width: 40px;
-	background-image: url("../images/load-logo.png");
+	/*background-image: url("../images/load-logo.png");*/
 	background-position: center;
 	background-size: cover;
-	-webkit-animation:spin 1s linear infinite;
+/*	-webkit-animation:spin 1s linear infinite;
     -moz-animation:spin 1s linear infinite;
-    animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;*/
+}
+
+.voyager-load {
+	position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+	margin: auto;
+	height: 200px;
+	width: 200px;
+	-webkit-animation:spin 2s linear infinite;
+	-moz-animation:spin 2s linear infinite;
+	animation:spin 2s linear infinite;
 }
 
 @font-face {
