--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -8,7 +8,20 @@
 	<div id="side-redirect" class="selector"></div>
 </div>
 <div class="load-screen">
-	<div class="load-circle"></div>
+	<!-- <div class="load-circle"> -->
+	<?xml version="1.0" encoding="utf-8"?>
+	<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+	<svg class="voyager-load" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 viewBox="0 0 612 792" style="enable-background:new 0 0 612 792;" xml:space="preserve">
+	<style type="text/css">
+		.st0{fill:none;stroke:#FFFFFF;stroke-width:20;stroke-miterlimit:10;}
+		.st1{fill:#FFFFFF;stroke:#FFFFFF;stroke-miterlimit:10;}
+	</style>
+	<path class="st0" d="M501,445.3c-20.4,88.9-99.9,155.2-195,155.2c-110.5,0-200-89.5-200-200s89.5-200,200-200
+		c96.1,0,176.3,67.7,195.6,158"/>
+	<polygon class="st1" points="278.8,557.9 303.8,557.9 328.8,557.9 422.1,278 397.1,278 303.8,532.9 210.4,278 185.4,278 "/>
+	</svg>
+	<!-- </div> -->
 </div>
 <div class="title-divs title-screen">
 	<div class="background-smolder"></div>
