--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -846,13 +846,13 @@ body {
 }
 
 .selector {
-	height: 8px;
-	width: 8px;
-	border-radius: 8px;
+	height: 7px;
+	width: 7px;
+	border-radius: 7px;
 	/*border: 2px solid black;*/
-    border-color: black;
+    border-color: transparent;
     border-style: solid;
-    border-width: 0px;
+    border-width: 2px;
 	background-color: gray;
 	margin: auto;
 	left: 0; right: 0;
