--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -60,7 +60,7 @@ body {
 	background-color: white;
 	/*font-family: 'Cabin', sans-serif;*/
 	margin: 0 !important;
-	font-family: 'Lato-Bold'
+	font-family: 'Muli'
 }
 
 .generic-whitespace {
@@ -121,9 +121,7 @@ body {
 }
 
 .footer-wrapper {
-	/*position: relative;*/
 	width: 100%;
-	/*height: 200px;*/
 	overflow: auto;
 	background-color: #303030;
 }
@@ -145,7 +143,6 @@ body {
 	margin: 7px;
 	height: 25px;
 	width: 100%;
-	/*background-color: blue;*/
 }
 
 .follow-icon {
