added down arrow

--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -29,6 +29,15 @@
 		<h1 class="main-title"> Voyager Consulting </h1>
 		<h2 class="sub-title"> Impact Driven </h2>
 	</div>
+	<div class="arrow-container">
+		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 viewBox="0 0 219.5 94.5" style="enable-background:new 0 0 219.5 94.5; width: 180px" xml:space="preserve">
+		<style type="text/css">
+			.down_arrow{fill:#FFFFFF;}
+		</style>
+		<polygon class="down_arrow" points="209,23.4 109.5,72.4 10,23.4 109.5,47.9 "/>
+		</svg>
+	</div>
 </div>
 <div class="title-divs carousel-display">
 	<!-- <div class="carousel-divs current-carousel"></div> -->
