--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -31,12 +31,8 @@
 	border: 1px solid white;
 	height: 40px;
 	width: 40px;
-	/*background-image: url("../images/load-logo.png");*/
 	background-position: center;
 	background-size: cover;
-/*	-webkit-animation:spin 1s linear infinite;
-    -moz-animation:spin 1s linear infinite;
-    animation:spin 1s linear infinite;*/
 }
 
 .voyager-load {
@@ -67,8 +63,18 @@ body {
 	width: 100%;
 	height: 50px;
 	background-color: white;
-
 }
+
+.arrow-container {
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+}
+
+
 
 .response-alert {
 	position: fixed;
