--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -73,18 +73,6 @@
 			<!-- <h2 class="page-title"> Leadership </h2> -->
 			<div class="executive-box">
 				<div class="executive-member">
-					<div class="executive-picture felix-picture"></div>
-					<div class="executive-text">
-						Felix Liu
-					</div>
-					<div class="executive-description">
-						<p>
-							Vice President | Technical Development <br>
-							felixliu@berkeley.edu
-						</p>
-					</div>
-				</div>
-				<div class="executive-member">
 					<div class="executive-picture savan-picture"></div>
 					<div class="executive-text">
 						Savan Patel
@@ -94,20 +82,32 @@
 							Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
 						</p> -->
 						<p>
-							President <br>
+							Vice President | Consulting <br>
 							savan70@berkeley.edu
 						</p>
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture olivia-picture"></div>
+					<div class="executive-picture felix-picture"></div>
 					<div class="executive-text">
-						Olivia Gu
+						Felix Liu
 					</div>
 					<div class="executive-description">
 						<p>
-							Vice President | Professional Development <br>
-							oliviayugu@berkeley.edu
+							President <br>
+							felixliu@berkeley.edu
+						</p>
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture margarita-picture"></div>
+					<div class="executive-text">
+						Margarita Oreta
+					</div>
+					<div class="executive-description">
+						<p>
+							Vice President | External <br>
+							moreta@berkeley.edu
 						</p>
 <!-- 						<p>
 							Olivia is a third year studying Business Administration and Computer Science. Olivia began in Voyager as a consultant on the Twitch project and later was the project manager on the NBA project. Outside Voyager, Olivia has interned at Facebook and UBS and in her free time, enjoys sailing and going on adventures into the city.
@@ -115,21 +115,21 @@
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture ted-picture"></div>
+					<div class="executive-picture sanchit-picture"></div>
 					<div class="executive-text">
-						Ted Xiao
+						Sanchit Shorewala
 					</div>
 					<div class="executive-description">
 						<p>
-							Vice President | Operations
-							t.xiao@berkeley.edu
+							Vice President | Internal <br>
+							sanchit.shorewala@berkeley.edu
 						</p>
 <!-- 						<p>
 							Ted is a third year majoring in EECS and minoring in IEOR. Ted joined Voyager as a freshman on the Warby Parker team, and has served as a project leader for the Valve project. In his spare time, Ted enjoys playing chess and roller hockey.
 						</p> -->
 					</div>
 				</div>
-				<div class="executive-member">
+<!-- 				<div class="executive-member">
 					<div class="executive-picture philmon-picture"></div>
 					<div class="executive-text">
 						Philmon Tanuri
@@ -139,11 +139,8 @@
 							Vice President | Finance <br>
 							p.tanuri@berkeley.edu
 						</p>
-<!-- 						<p>
-							Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
-						</p> -->
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="generic-whitespace"></div>
