--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -9,8 +9,9 @@
 	<div class="title-wrapper style-purple">
 		<div class="executive-panel-title">Recruiting Timeline</div>
 	</div>
+	<div id='calendar'></div>
 	<div class="page-container">
-		<div class="line-break"></div>
+		<!-- <div class="line-break"></div> -->
 		<table class="u-full-width table-style">
 			<tr class="cabin-font">
 				<th> Event </th>
