--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -14,6 +14,10 @@
 	src: url(../Roboto-Thin.ttf);
 }*/
 
+#calendar {
+	margin: 40px;
+}
+
 .load-screen {
 	background-color: black;
 	position: fixed;
